@@ -8,6 +8,8 @@ update-manager (1:0.59.12) feisty; urgency=low
       fix the regression
   * DistUpgrade/DistUpgradeApport.py:
     - do not crash if no apport gui is available (LP#97498)
+  * DistUpgrade/DistUpgradeViewText.py:
+    - support details in text-mode (LP#94129)
   
 
  --
